k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disasterflow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true" 

spec:
  ingressClassName: ngnix
  rules:
  - host: account.disasterflow.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: account
            port:
              number: 8000
  - host: alerts.disasterflow.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alert
            port:
              number: 8001
